
5.2b1 -> 5.3a1
    - jbj: cudf: fiddle up some methods for cudftool-equiv in JS.
    - jbj: cudf: move rpmcudp/rpmcudv typedef's and structures into rpmcudf.h.
    - jbj: cudf: add JS methods and some silly unit tests.
    - jbj: cudf: build & install cudftool iff --with-cudf AutoFu.
    - jbj: cudf: move cudftool innards to -lrpmio. silly methods atm, todo++.
    - jbj: cudf: stub-in cudftool with -lcudf AutoFu.
    - jbj: change sonames to 5.3.
    - jbj: rpmbf: estimate optimal {m,k} parameters given {n,e}.
    - jbj: mire: fix: use strncmp, rpmdb string keys are not NUL terminated.
    - rpm.org: port addFingerprints.
    - rpm.org: port a copy of fpLookupSubdir.
    - jbj: rpmdb: Stub-in RPMDBI_REPACKAGES/RPMDBI_REPOSITORY stores.
    - jbj: rpmdb: Eliminate RPMDBI_LABEL. Use RPMTAG_NVRA instead.
    - jbj: rpmmi: Prepare for multiple primary stores w mi_index -> mi_primary.
    - jbj: dbi: Prepare for multiple primary stores w dbi_index -> dbi_primary.
    - jbj: dbi: Eliminate verify_on_close/noload/byteswapped coprolites.
    - jbj: rpmdb: Permit patterns on (little used) secondary indices.
    - jbj: rpmdb: Stub-in an event_notify callback.
    - jbj: rpmdb: Wire up DB_RECOVER progress feedback callback.
    - jbj: rpmlio: Register logio dispatch handler with db_recover.
    - jbj: rpmdb: Switch to inplace rpmtsRebuildDB(), eliminate rpmdbRebuild().
    - jbj: rpmmi: Eliminate rpmmiSetHdrChk(), get ts out of the rpmdb layer.
    - jbj: rpmdb: Eliminate signature/digest checks on rpmdb header blobs.
    - jbj: rpmdb: swab integer secondary keys when retrieving through rpmmi.
    - jbj: js: add rpmmi unit tests for common accesses including patterns.
    - jbj: js: fix: add a newref for headers retrieved using rpmmi.
    - jbj: rpmdb: use network order for all integer secondary keys.
    - jbj: rpmdb: fold rpmdbMireApply into dbiMireKeys.
    - jbj: rpmmi: optimize NVRA range queries using a *RE stem.