@@ -1,5 +1,7 @@
 
 5.2b1 -> 5.3a1
+    - jbj: pubkeys: fix: all headers, including pubkeys, need PACKAGECOLOR.
+    - jbj: pubkeys: fix: rpmdbAdd() needs to be transactionally protected.
     - jbj: cudf: fiddle up some methods for cudftool-equiv in JS.
     - jbj: cudf: move rpmcudp/rpmcudv typedef's and structures into rpmcudf.h.
     - jbj: cudf: add JS methods and some silly unit tests.
